--- a/common-core/src/main/resources/application.properties
+++ b/common-core/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_log
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8084
